Fix IE11 align center in Select2

--- a/assets/scss/plugins/select2/_dropdown.scss
+++ b/assets/scss/plugins/select2/_dropdown.scss
@@ -2,14 +2,14 @@
   animation: opacity 0.03s linear, select-menu-scale 0.12s cubic-bezier(0, 0, 0.2, 1);
   background-color: $menu-bg;
   border-radius: 0 0 $textfield-box-border-radius $textfield-box-border-radius;
-  box-shadow: map-get($menu-elevation-shadow, shadow); // 0 5px 5px -3px rgba(0, 0, 0, 0.2), 0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12);
+  box-shadow: map-get($menu-elevation-shadow, shadow);
   box-sizing: border-box;
   display: block;
   position: absolute;
   left: -100000px;
   transform-origin: center top;
   width: 100%;
-  z-index: map-get($menu-elevation-shadow, elevation); // 120
+  z-index: map-get($menu-elevation-shadow, elevation);
 }
 
 .select2-container--open {
@@ -74,6 +74,7 @@
 .select2-results__group {
   align-items: center;
   display: flex;
+  height: 1rem; // Fix IE11 align center
   min-height: $menu-link-height;
   padding: $menu-link-padding-y $menu-link-padding-x;
   position: relative;
